tests/type-errors/expr_cmp_eq_set.arl
archetype expr_cmp_eq_set

entry exec () {
  var a : set<int> = [1; 2; 3];
  var b : set<int> = [1; 2; 3];
  dorequire (a = b);
}
